--- a/src/Pages/ProductPage/ProductPageDesktop/ProductPage.css
+++ b/src/Pages/ProductPage/ProductPageDesktop/ProductPage.css
@@ -24,3 +24,13 @@
     width: 100%;
     margin: 10px 0px;
 }
+/* buyer */
+.button-buyer{
+    width: 100%;
+    font-size: 1vw;
+    background-color: #7126B5;
+    border-radius: 10px;
+    color: white;
+    padding: 5px;
+    border: none;
+}
