--- a/src/Pages/Register/RegisterPageDesktop/RegisterDesktop.css
+++ b/src/Pages/Register/RegisterPageDesktop/RegisterDesktop.css
@@ -1,7 +1,7 @@
 
 .image-Register{
     height: 100vh;
-    background-image: url(../../Assets/Img/img_logreg.svg);
+    background-image: url(../../../Assets/Img/img_logreg.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
