--- a/src/Pages/InfoProduct/InfoProduct.css
+++ b/src/Pages/InfoProduct/InfoProduct.css
@@ -1,4 +1,4 @@
-/* Desktop */
+/* ---- Desktop ---- */
 .ip-content-button{
     display: flex;
     justify-content: flex-end;
@@ -82,3 +82,8 @@
     padding: 1% 5%;
     margin-bottom: 5%;
 }
+
+
+
+
+/* ---- Mobile ---- */
