--- a/src/Pages/ProductPage/ProductPage.css
+++ b/src/Pages/ProductPage/ProductPage.css
@@ -33,7 +33,8 @@
     background-color: #7126B5;
     border-radius: 10px;
     color: white;
-    padding: 5px;
+    padding: 3%;
+    margin: 3% 0%;
     border: none;
 }
 .button-buyer:hover{
