--- a/src/Pages/InfoProduct/InfoProduct.css
+++ b/src/Pages/InfoProduct/InfoProduct.css
@@ -1,3 +1,22 @@
+.color-black{
+    color: black !important;
+}
+.ip-button-preview{
+    border: none;
+    outline: #7126B5 solid 2px;
+    border-radius: 10px;
+    padding: 1% 5%;
+    margin-bottom: 5%;
+}
+.ip-button-send{
+    color: white;
+    border: none;
+    background-color: #7126B5;
+    border-radius: 10px;
+    padding: 1% 5%;
+    margin-bottom: 5%;
+}
+
 /* ---- Desktop ---- */
 .ip-content-button{
     display: flex;
@@ -59,31 +78,80 @@
     width: 150px;
     height: 150px;
 }
-.color-black{
-    color: black !important;
-}
 .ip-box-button{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-}
-.ip-button-preview{
-    border: none;
-    outline: #7126B5 solid 2px;
-    border-radius: 10px;
-    padding: 1% 5%;
-    margin-bottom: 5%;
-}
-.ip-button-send{
-    color: white;
-    border: none;
-    background-color: #7126B5;
-    border-radius: 10px;
-    padding: 1% 5%;
-    margin-bottom: 5%;
 }
 
 
 
 
 /* ---- Mobile ---- */
+.ipm-header{
+    padding: 2% 0% 2% 0%; 
+    box-shadow: 0px 0px 1px rgb(0, 0, 0.25);
+}
+.ipm-content-button{
+    border: 2px solid black;
+    border: none;
+    background-color: transparent;
+    border-radius: 50%;
+}
+.ipm-content-button:hover{
+    background-color: lightgray;
+    color: blue;
+}
+.ipm-content-title{ 
+    text-align: center;
+    font-weight: bolder;
+}
+.ipm-body{
+    display: flex;
+    flex-direction: column;
+    gap:10px;
+}
+.ipm-body-input{
+    display: flex;
+    flex-direction: column;
+    margin-top: 5%;
+    padding: 0% 8%;
+}
+.ipm-body-input input{
+    border: 2px solid lightgray;
+}
+.ipm-body-input select{
+    border: 2px solid lightgray;
+    border-radius: 10px;
+    padding: 2px 18px;
+    color: gray;
+}
+.ipm-body-input textarea{
+    border: 2px solid lightgray;
+    border-radius: 10px;
+    padding: 2px 18px;
+    color: gray;
+}
+.ipm-body-inputImage{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border: 2px solid lightgray;
+    border-radius: 10px;
+    color: gray;
+    padding: 5% 2%;
+}
+.ipm-body-inputImage input{
+    border: none;
+}
+.ipm-body-inputImage img{
+    border: 2px dashed lightgray;
+    width: 100px;
+    height: 100px;
+}
+.ipm-body-buttonAction{
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+   margin: 5% 0%;
+}
