--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -16,3 +16,38 @@ form button{
     background-color: transparent;
     border: none;
 }
+.box-button-action{
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+}
+.button-action-navbar{
+    border: none;
+    border-radius: 50%;
+    padding: 3%;
+    background-color: transparent;
+}
+.button-action-navbar:hover{
+    background-color: gray;
+    color: blue;
+}
+.card-notification{
+    padding: 3px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 1px 0.5px 0px rgba(124, 104, 104, 0.25);
+}
+.card-notification span{
+    font-size: x-small;
+}
+.card-user{
+    margin: 5% 0%;
+    box-shadow: 0px 1px 10px 0px rgba(124, 104, 104, 0.25);
+}
+.text-link{
+    text-decoration: none;
+    color: black;
+}
+.btn-logout{
+    border: none;
+}
