--- a/src/Pages/Home/Desktop/HomeDekstop.css
+++ b/src/Pages/Home/Desktop/HomeDekstop.css
@@ -1,32 +1,47 @@
-.swiper {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .swiper-slide {  
-
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-  }
-  
 .swiper-slide img {
-  width: 70vw;
-  height: 45vh;
-  border-radius: 20px;
+  width: 100%;
+  height: 30vh;
+}
+.active-img{
+  transform: scale(1.2, 1.2);
+}
+.not-active-img{
+  transform: scale(0.8, 0.8);
+}
+.pagination-swiper{
   display: flex;
-  flex-direction: row;
+  justify-content: center;
+  margin: 3% 0% 0% 0%;
+}
+.container-sm{
+  margin: 2% 0%;
 }
 
+.tabs-container{
+  margin: 2% 0%;
+}
+.nav-item {
+  background-color: #E2D4F0 !important;
+  color: black !important;
+  margin: 1% 1% !important; 
+  border-radius: 16px !important;
+  width: 150px !important;
+}
+.nav-link{
+  border-radius: 20px !important;
+  padding: 5px 25px !important;
+  color: black !important;
+  width: 100%;
+}
+.nav-link.active{
+  background-color: lightskyblue !important;
+  border-radius: 16px !important;
+  color: #7126B5 !important;
+}
+
+.content-filter{
+  padding: 1% 0%;
+}
 .btn-filter{
   border-style: none;
   width: 10vw;
@@ -55,10 +70,6 @@
 .btn-plus:hover{
   background: #4B1979;
 }
-
-
- 
-
 
 
 
