--- a/src/Pages/Home/Desktop/HomeDekstop.css
+++ b/src/Pages/Home/Desktop/HomeDekstop.css
@@ -40,7 +40,9 @@
 }
 
 .content-filter{
-  padding: 1% 0%;
+  display: flex;
+  flex-direction: raw;
+  gap: 10px
 }
 .btn-filter{
   border-style: none;
