--- a/src/Pages/InfoPenawar/infoPenawar.css
+++ b/src/Pages/InfoPenawar/infoPenawar.css
@@ -20,7 +20,7 @@
     
 }
 
-.modal{
+.modal-mobile-position{
     position: fixed !important;
     top: 41% !important;
     margin: 0px !important;
