--- a/src/Components/NavbarMobile/NavbarMobile.css
+++ b/src/Components/NavbarMobile/NavbarMobile.css
@@ -9,5 +9,18 @@
 }
 
 .mobile-content-menu{
-   box-shadow: 1px 1px 10px 5px rgba(13, 176, 176, 0);
+   padding: 1% 0%;
+   box-shadow: 5px 0px 5px rgba(10, 68, 0, 0.5);
+}
+.toggle-button{
+   border: none;
+   background-color: transparent;
+}
+.toggle-button:hover{
+   color:blue;
+   background-color: gray;
+}
+.mobile-location-title{
+   text-align: center;
+   font-weight: bolder;
 }
