--- a/src/Pages/Home/Mobile/HomeMobile.css
+++ b/src/Pages/Home/Mobile/HomeMobile.css
@@ -1,6 +1,8 @@
 .content-filter-mobile{
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
   flex-wrap: wrap;
   gap: 10px;
 }
@@ -36,6 +38,9 @@ box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 background: #4B1979;
 }
 .slide2{
+  width: 100%;
+}
+.hm-img{
   width: 100%;
 }
 
