--- a/src/Pages/Notifikasi/Notifikasi.css
+++ b/src/Pages/Notifikasi/Notifikasi.css
@@ -1,6 +1,66 @@
-/* mobile */
-.continer-notifikasi{
+/* Desktop */
+.dn-card{
     display: flex;
-    flex-direction:  column;
+    flex-direction:  row;
     gap: 5px;
+    padding: 1%;
+    margin: 2% 0%;
+    box-shadow: 1px 1px 5px 1px rgba(124, 104, 104, 0.25);
+}
+.dn-content-image{
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.dn-content-info{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 1%;
+}
+.dn-content-title-info{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.dn-content-title-info .mn-text-title{
+    color: gray;
+    font-size: 0.5em;
+}
+.dn-content-info span{
+    font-size: 1.5em;
+}
+/* mobile */
+.mn-card{
+    display: flex;
+    flex-direction:  row;
+    gap: 5px;
+    padding: 1%;
+    margin: 2% 0%;
+    box-shadow: 1px 1px 5px 1px rgba(124, 104, 104, 0.25);
+}
+.mn-content-image{
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.mn-content-info{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 1%;
+}
+.mn-content-title-info{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.mn-content-title-info .mn-text-title{
+    color: gray;
+    font-size: 0.5em;
+}
+.mn-content-info span{
+    font-size: 0.8em;
 }
