--- a/src/Pages/Login/LoginPageDesktop/Login.css
+++ b/src/Pages/Login/LoginPageDesktop/Login.css
@@ -1,7 +1,7 @@
 
 .slide-satu{
     height: 100vh;
-    background-image: url(../../../Assets/Img/img_logreg.svg);
+    background-image: url(../../../Assets/Img/slideSatu.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
