--- a/src/Components/CardProduct/CardProduct.css
+++ b/src/Components/CardProduct/CardProduct.css
@@ -1,6 +1,6 @@
 .card-product{
     min-height: 250px;
-    /* padding: 5%; */
+    padding: 7%;
     border-radius: 16px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
