--- a/src/Pages/Home/Mobile/HomeMobile.css
+++ b/src/Pages/Home/Mobile/HomeMobile.css
@@ -45,9 +45,9 @@ background: #4B1979;
 }
 
 
-.btn-filter span{
+/* .btn-filter span{
   font-size: 2vw;
-}
+} */
 
 .offcanvas{
   width: 60% !important;
