--- a/src/Pages/Home/Desktop/HomeDekstop.css
+++ b/src/Pages/Home/Desktop/HomeDekstop.css
@@ -42,11 +42,11 @@
 .content-filter{
   display: flex;
   flex-direction: raw;
-  gap: 10px
+  justify-content: space-around;
 }
 .btn-filter{
   border-style: none;
-  width: 10vw;
+  width: 12vw;
   height: 6vh;
   background-color: #E2D4F0;
   border-radius: 12px;
