--- a/src/Pages/Login/LoginPageDesktop/Login.css
+++ b/src/Pages/Login/LoginPageDesktop/Login.css
@@ -1,6 +1,6 @@
 .slide-satu{
     height: 100vh;
-    background-image: url(../../../Assets/Img/pencilspink.jpg);
+    background-image: url(../../../Assets/Img/pencilsPink.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
