--- a/src/Pages/Login/LoginPageDesktop/Login.css
+++ b/src/Pages/Login/LoginPageDesktop/Login.css
@@ -23,7 +23,7 @@
 }
 
 .img-background {
-    background-image: url(../../../Assets/Img/gif.gif);
+    background-image: url(../../../Assets/Img/background.jpg);
     height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
