--- a/src/Pages/InfoProfile/InfoprofileDesktop/InfoProfileDesktop.css
+++ b/src/Pages/InfoProfile/InfoprofileDesktop/InfoProfileDesktop.css
@@ -31,3 +31,8 @@
     background-color: lightgray;
     color: blue;
 }
+.if-img{
+    width: 200px;
+    height: 200px;
+    border-radius: 16px;
+}
