--- a/src/Pages/Home/DataDummy/Card.css
+++ b/src/Pages/Home/DataDummy/Card.css
@@ -1,6 +1,7 @@
 .card-product{
     min-height: 250px;
     /* padding: 5%; */
+    background-color: #FFFFF2;
     border-radius: 16px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
