--- a/src/Components/NavbarMobile/NavbarMobile.css
+++ b/src/Components/NavbarMobile/NavbarMobile.css
@@ -1,3 +1,6 @@
+.bg-canvas{
+   background-color: #FFFFF2 !important;
+}
 .button-login-active{
    display: flex;
    flex-direction: column;
@@ -10,6 +13,7 @@
 
 .mobile-content-menu{
    padding: 1% 0%;
+   background-color: #FFFFF2;
    box-shadow: 5px 0px 5px rgba(10, 68, 0, 0.5);
 }
 .toggle-button{
