--- a/src/Pages/DaftarJual/Desktop/DaftarJualDesktop.css
+++ b/src/Pages/DaftarJual/Desktop/DaftarJualDesktop.css
@@ -1,7 +1,7 @@
 .btn-edit{
     border-radius: 8px;
     border: 1px solid #7126B5;
-    background: #FFFFFF;
+    background-color: #FFFFFF;
     width: 4rem;
     height: 2rem;
     margin-top: 0.5rem;
@@ -20,7 +20,7 @@
 }
 .box-action-df{
     padding: 10px 20px;
-    background: #FFFFFF;
+    background: #FFFFF2;
     box-shadow: 0 0px 10px rgba(0,0,0,15%);
     border-radius: 16px;
 }
