--- a/src/Pages/DaftarJual/Mobile/DaftarJualMobile.css
+++ b/src/Pages/DaftarJual/Mobile/DaftarJualMobile.css
@@ -1,4 +1,4 @@
-.btn-edit{
+.btn-edit-mobile{
     border-radius: 8px;
     border: 1px solid #7126B5;
     background: #FFFFFF;
@@ -6,7 +6,7 @@
     height: 2rem;
     margin-top: 0.5rem;
 }
-.btn-edit:hover{
+.btn-edit-mobile:hover{
     background: #7126B5;
     color: white;
 }
