--- a/src/Pages/Home/Desktop/HomeDekstop.css
+++ b/src/Pages/Home/Desktop/HomeDekstop.css
@@ -1,6 +1,9 @@
 .swiper-slide img {
+  background-color: white;
   width: 100%;
   height: 30vh;
+  border-radius: 16px;
+  box-shadow: 8px 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 .active-img{
   transform: scale(1.2, 1);
