--- a/src/Pages/InfoPenawar/infoPenawar.css
+++ b/src/Pages/InfoPenawar/infoPenawar.css
@@ -2,7 +2,7 @@
 
     width: 158px;
     height: 36px;
-    background-color: white;
+    background-color: #FFFFF2;
     border-radius: 16px;
     color: black;
     padding: 5px;
@@ -14,7 +14,7 @@
     height: 36px;
     background-color: #7126B5;
     border-radius: 16px;
-    color: white;
+    color: #FFFFF2;
     padding: 5px;
     border: none;
     
