--- a/src/Pages/Notifikasi/Notifikasi.css
+++ b/src/Pages/Notifikasi/Notifikasi.css
@@ -1,5 +1,6 @@
 /* Desktop */
 .dn-card{
+    background-color: #FFFFF2;
     display: flex;
     flex-direction:  row;
     gap: 5px;
@@ -37,6 +38,7 @@
 }
 /* mobile */
 .mn-card{
+    background-color: #FFFFF2;
     display: flex;
     flex-direction:  row;
     gap: 5px;
@@ -45,7 +47,7 @@
     box-shadow: 1px 1px 5px 1px rgba(124, 104, 104, 0.25);
 }
 .mn-content-image{
-    width: 20%;
+    width: 30%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -67,4 +69,9 @@
 }
 .mn-content-info span{
     font-size: 0.8em;
+}
+.mn-content-button{
+    display: flex;
+    justify-content: center;
+    font-size: xx-small;
 }
