--- a/src/Pages/Login/LoginPageMobile/LoginMobile.css
+++ b/src/Pages/Login/LoginPageMobile/LoginMobile.css
@@ -13,13 +13,13 @@
     height: 100%;
 }
 .tombol-masuk{
-
     width: 100%;
     height: 48px;
     background-color: #7126B5;
     border-radius: 16px;
     color: white;
     padding: 5px;
+    margin: 5% 0%;
     border: none;
 }
 
