--- a/src/Pages/ProductPage/ProductPage.css
+++ b/src/Pages/ProductPage/ProductPage.css
@@ -11,6 +11,7 @@
 }
 .text-desc{
     margin: 2% 15%;
+    background-color: #FFFFF2;
     padding: 10px 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
     border-radius: 16px;
@@ -18,7 +19,7 @@
 }
 .box-action{
     padding: 10px 20px;
-    background: #FFFFFF;
+    background: #FFFFF2;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
     border-radius: 16px;
 }
@@ -32,7 +33,7 @@
     font-size: 1vw;
     background-color: #7126B5;
     border-radius: 10px;
-    color: white;
+    color: #FFFFF2;
     padding: 3%;
     margin: 3% 0%;
     border: none;
