--- a/src/Pages/Home/DataDummy/Card.css
+++ b/src/Pages/Home/DataDummy/Card.css
@@ -1,7 +1,7 @@
 .card-product{
     min-height: 250px;
     /* padding: 5%; */
-    background-color: #FFFFF2;
+    background-color: #f8f8ea;
     border-radius: 16px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
@@ -45,3 +45,14 @@
     background-color:  #FF1493;
     transition: .3s ease-in-out;
   } 
+.card-pi-box{
+    display: flex;
+    flex-direction: row;
+    gap: 1%;
+}
+.card-pi-box-category{
+    background-color: lightpink;
+    padding: 1% 3%;
+    width: max-content;
+    border-radius: 16px;
+}
