--- a/src/Pages/Home/DataDummy/Card.css
+++ b/src/Pages/Home/DataDummy/Card.css
@@ -1,6 +1,6 @@
 .card-product{
     min-height: 250px;
-    /* padding: 5%; */
+    padding: 7%;
     background-color: #f8f8ea;
     border-radius: 16px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
