--- a/src/Pages/ProductPage/ProductPage.css
+++ b/src/Pages/ProductPage/ProductPage.css
@@ -44,9 +44,6 @@
 }
 
 /* ------- mobile ------------ */
-/* .borderr{
-    border: 2px solid black;
-} */
 .button-float-back{
     position: relative;
     width:30px;
@@ -55,7 +52,7 @@
     left: 5%;
     border: none;
     border-radius: 50%;
-    background-color: white;
+    background-color: #FFFFF2;
 }
 .button-float-back:hover{
     background-color: lightblue;
@@ -78,9 +75,11 @@
 }
 .mobile-box-info{ 
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
     gap: 2px;
-    background-color: white;
+    background-color: #FFFFF2;
     width: 80%;
     padding: 5px 10px;
     border-radius: 16px;
@@ -96,6 +95,7 @@
     display: flex;
     flex-direction: row;
     border-radius: 16px;
+    background-color: #FFFFF2;
 }
 .mobile-box-user .account{
     width: 100%;
@@ -109,6 +109,7 @@
     padding: 5px 10px;
     border-radius: 16px;
     margin-bottom: 15%;
+    background-color: #FFFFF2;
 }
 .button-float-send{
     position: fixed;
