--- a/src/Pages/Notifikasi/Notifikasi.css
+++ b/src/Pages/Notifikasi/Notifikasi.css
@@ -36,6 +36,19 @@
     display: flex;
     justify-content: center;
 }
+.dn-tbl-lihat {
+    width: 30%;
+    height: 32px;
+    background-color: #7126B5;
+    border-radius: 8px;
+    color: white;
+    padding: 5px;
+    border: none;
+}
+.dn-tbl-lihat:hover {
+    background-color:  #FF1493;
+    transition: .3s ease-in-out;
+}
 /* mobile */
 .mn-card{
     background-color: #FFFFF2;
@@ -74,4 +87,17 @@
     display: flex;
     justify-content: center;
     font-size: xx-small;
+}
+.mn-tbl-lihat {
+    width: 30%;
+    height: 24px;
+    background-color: #7126B5;
+    border-radius: 8px;
+    color: white;
+    padding: 5px;
+    border: none;
+}
+.mn-tbl-lihat:hover {
+    background-color:  #FF1493;
+    transition: .3s ease-in-out;
 }
