--- a/src/Pages/Home/DataDummy/Card.css
+++ b/src/Pages/Home/DataDummy/Card.css
@@ -4,6 +4,11 @@
     background-color: #f8f8ea;
     border-radius: 16px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    transition: transform .5s;
+}
+
+.card-product:hover {
+    transform: scale(1.1);
 }
 .card-img{
     width: 100%;
