--- a/src/Components/CardProduct/CardProduct.css
+++ b/src/Components/CardProduct/CardProduct.css
@@ -4,6 +4,10 @@
     border-radius: 16px;
     background-color: #FFFFF2;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    transition: transform .5s;
+}
+.cardProduct-product:hover {
+    transform: scale(1.1);
 }
 .cardProduct-img{
     width: 100%;
