--- a/src/Pages/Notifikasi/Notifikasi.css
+++ b/src/Pages/Notifikasi/Notifikasi.css
@@ -6,6 +6,7 @@
     gap: 5px;
     padding: 1%;
     margin: 2% 0%;
+    border-radius:8px;
     box-shadow: 1px 1px 5px 1px rgba(124, 104, 104, 0.25);
 }
 .dn-content-image{
@@ -74,4 +75,16 @@
     display: flex;
     justify-content: center;
     font-size: xx-small;
+}
+.btn-tawaran{
+    width: 15%;
+    height: 32px;
+    background-color: #7126B5;
+    border-radius: 8px;
+    color: white;
+    border: none;
+}
+.btn-tawaran:hover{
+    background-color:  #FF1493;
+    transition: .3s ease-in-out;
 }
