--- a/src/Pages/MyAccount/MyAccount.css
+++ b/src/Pages/MyAccount/MyAccount.css
@@ -7,6 +7,7 @@
 }
 .mma-image-content{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -17,11 +18,11 @@
     display: flex;
     flex-direction: column;
     padding: 10%;
-    gap: 25px;
 }
 .mma-button{
-    padding: 3% ;
-    box-shadow: 0px 1px 0px 0px rgba(63, 68, 71, 0.5);
+    padding: 5% ;
+    border-bottom: 2px solid black;
+    /* box-shadow: 0px 1px 0px 0px rgba(63, 68, 71, 0.5); */
 }
 .mma-button:hover{
     background-color: lightgray;
