--- a/src/Pages/ProductPage/ProductPage.css
+++ b/src/Pages/ProductPage/ProductPage.css
@@ -1,6 +1,18 @@
-.text-category, .text-profile{
+.text-category{
     color: gray;
     font-size: small;
+    background-color: lightpink;
+    padding: 1% 3%;
+    width: max-content;
+    border-radius: 16px;
+}
+.text-profile{
+    color: gray;
+    font-size: small;
+    
+}
+.text-price{
+    font-size: 1.2rem;
 }
 
 /* ----------- Desktop -----------*/
@@ -18,7 +30,7 @@
     text-align: justify;
 }
 .box-action{
-    padding: 10px 20px;
+    padding: 3% 5%;
     background: #FFFFF2;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
     border-radius: 16px;
@@ -101,9 +113,10 @@
 }
 .mobile-box-user .account{
     width: 100%;
-    padding: 0% 5%;
+    padding: 3% 5%;
     display: flex;
     flex-direction: column;
+    gap: 8px;
 }
 .mobile-box-desc{
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
