--- a/src/Pages/InfoProduct/InfoProduct.css
+++ b/src/Pages/InfoProduct/InfoProduct.css
@@ -17,7 +17,13 @@
     padding: 1% 5%;
     margin-bottom: 5%;
 }
-
+.error-product{
+    color: #ffff;
+    background-color: #d79962;
+    padding: .4% 2%;
+    border-radius: 8px;
+    font-size: 80%;
+}
 /* ---- Desktop ---- */
 .ip-content-button{
     display: flex;
@@ -43,6 +49,7 @@
 }
 .ip-box-input label{
     font-weight: bold;
+    margin-bottom: 1%;
 }
 .ip-box-input input{
     border: 2px solid lightgray;
