--- a/src/Pages/MyAccount/MyAccount.css
+++ b/src/Pages/MyAccount/MyAccount.css
@@ -21,9 +21,19 @@
 }
 .mma-button{
     padding: 5% ;
-    border-bottom: 2px solid black;
+    width: 100%;
     /* box-shadow: 0px 1px 0px 0px rgba(63, 68, 71, 0.5); */
 }
 .mma-button:hover{
     background-color: lightgray;
+}
+.dn-card{
+    background-color: #FFFFF2;
+    display: flex;
+    flex-direction:  row;
+    gap: 5px;
+    padding: 1%;
+    margin: 2% 0%;
+    border-radius:8px;
+    box-shadow: 1px 1px 5px 1px rgba(124, 104, 104, 0.25);
 }
