--- a/src/Pages/InfoPenawar/infoPenawar.css
+++ b/src/Pages/InfoPenawar/infoPenawar.css
@@ -33,3 +33,9 @@
     margin: 0px !important;
     width: 100% !important;
 }
+.text-tawaran{
+    background-color: lightskyblue;
+    padding: 1% 3%;
+    width: fit-content;
+    border-radius: 16px;
+}
