Update Major Featured
- daftar tawar dan jual (handle role adn user akses n connect API)
- info profile (handle role n user akses dan connect API)
- whislistLocal

--- a/src/Pages/DaftarJual/Desktop/DaftarJualDesktop.css
+++ b/src/Pages/DaftarJual/Desktop/DaftarJualDesktop.css
@@ -27,3 +27,12 @@
 .btn-dt-d{
     font-size: 1vw;
 }
+.dj-NotFound{
+    width: 100%;
+    height: 15em;
+}
+.djd-img-profile{
+    width: 60px;
+    height: 60px;
+    border-radius: 5px;
+}
