--- a/src/Pages/ProductPage/ProductPage.css
+++ b/src/Pages/ProductPage/ProductPage.css
@@ -9,12 +9,15 @@
 .text-profile{
     color: gray;
     font-size: small;
-    
 }
 .text-price{
     font-size: 1.2rem;
 }
-
+.pp-image-profile{
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+}
 /* ----------- Desktop -----------*/
 .img-product{
     border-radius: 10px;
@@ -109,6 +112,8 @@
     padding: 3px 10px;
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
     border-radius: 16px;
     background-color: #FFFFF2;
 }
@@ -129,10 +134,26 @@
 }
 .button-float-send{
     position: fixed;
-    width: 80%;
+    width: 50%;
 	height:30px;
-	bottom:20px;
-    left: 10%;
+	bottom:40px;
+    left: 30%;
+    border: 2px solid #7126B5;
+    border-radius: 16px;
+    color: black;
+    padding: 5px 20px;
+    /* background-color: #7126B5; */
+    box-shadow: 10px 0px 10px rgba(0, 0, 0, 0.25);
+}
+.button-float-send:hover{
+    background-color: lightblue;
+}
+.button-float-delete{
+    position: fixed;
+    width: 50%;
+	height:30px;
+	bottom:5px;
+    left: 30%;
     border: none;
     border-radius: 16px;
     color: white;
@@ -140,7 +161,7 @@
     background-color: #7126B5;
     box-shadow: 10px 0px 10px rgba(0, 0, 0, 0.25);
 }
-.button-float-send:hover{
+.button-float-delete:hover{
     background-color: lightblue;
 }
 
