--- a/src/Pages/Notifikasi/Notifikasi.css
+++ b/src/Pages/Notifikasi/Notifikasi.css
@@ -112,3 +112,19 @@
     background-color:  #FF1493;
     transition: .3s ease-in-out;
 }
+.mn-acc{
+    background-color: green;
+    width: fit-content;
+    color: white;
+    border-radius: 16px;
+    padding: 0.5% 2%;
+    font-size: 1vh;
+}
+.mn-reject{
+    background-color: red;
+    width: fit-content;
+    color: white;
+    border-radius: 16px;
+    padding: 0.5% 2%;
+    font-size: 1vh;
+}
